--- a/Pousada/pom.xml
+++ b/Pousada/pom.xml
@@ -14,6 +14,11 @@
 	    <artifactId>jackson-datatype-jsr310</artifactId>
 	    <version>2.17.2</version>
 	</dependency>
+	<dependency>
+		<groupId>br.edu.ifsc.poo</groupId>
+		<artifactId>avaliacao1</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</dependency>
   </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
